added get sum my transaction
